# urc-software

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  DOCUMENTATION.md  Dockerfile  Makefile  README.md  ament_code_style.cfg  format.md  install_dependencies.sh  install_script.sh  license.txt  setup.sh
leo_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_description/hooks/: gz_sim_resource_path.dsv
leo_description/launch/: state_publisher.launch.xml
leo_description/models/: Antenna.dae  Chassis_outline.stl  Mecanum_wheel_outline.stl  Rocker.dae  Rocker_outline.stl  WheelA.dae  WheelB.dae  Wheel_outline.stl
leo_description/urdf/: leo.urdf.xacro  leo_sim.urdf.xacro  macros.xacro
mapping/: CMakeLists.txt  package.xml
mapping/config/: mapping_params.yaml
mapping/include/: elevation_mapping.hpp
mapping/launch/: mapping.launch.py
mapping/src/: elevation_mapping.cpp
rocker_differential_plugin/: CMakeLists.txt  package.xml
rocker_differential_plugin/hooks/: gz_sim_system_plugin_path.dsv  gz_sim_system_plugin_path.sh
rocker_differential_plugin/src/: differential_system.cpp
urc_arm/: CMakeLists.txt  arm.md  package.xml  requirements.txt
urc_arm/config/: controller_config.yaml
urc_arm/launch/: mjsim.launch.py  sim.launch.py
urc_arm/notebook/: placo_arm_control.ipynb
urc_arm/scripts/: arm_rt.py  armjoy.py  test_arm.ipynb
urc_arm/src/: arm_mjsim.cpp  arm_rt.cpp
urc_behavior/: CMakeLists.txt  README.md  package.xml
urc_behavior/behavior_trees/: bt_test.xml  status_light.xml  tree.xml  urc.btproj  urc_strategies.btproj
urc_behavior/config/: bt_executor_params.yaml
urc_behavior/launch/: behavior.launch.py  bt.launch.py
urc_behavior/src/: bt_executor.cpp  bt_orchestrator.cpp  dispatcher.cpp
urc_behaviors/: CMakeLists.txt  package.xml
urc_behaviors/include/: search_for_aruco.hpp
urc_behaviors/src/: search_for_aruco.cpp
urc_bringup/: CMakeLists.txt  bringup.md  package.xml
urc_bringup/config/: controller_config.yaml  hardware_config.yaml  heartbeat_publisher.yaml  imu_config.yaml  nmea_serial_driver.yaml  ros2_control_diffbot.yaml  ros2_control_leo.yaml  ros2_control_walli.yaml  servo_config.yaml  sim_config.yaml  test_controllers.yaml  twist_mux_config.yaml  vectornav_imu.yaml
urc_bringup/include/: ground_truth.hpp  heartbeat_publisher.hpp  orientation_pose_bridge.hpp  rocker_effort_pid.hpp  rocker_tf_broadcaster.hpp  rover_pose_bridge.hpp
urc_bringup/launch/: _bringup.arm.launch.py  arm_sim.launch.py  autonomy.launch.py  base_station.launch.py  base_station_gps.launch.py  bringup.launch.py  bringup.servo.launch.py  bringup_autonomy.launch.py  bringup_simulation.launch.py  bt.launch.py  diffbot.launch.py  heartbeat_publisher.launch.py  imu.launch.py  imu_driver.py  launch_sim.py  rocker_effort_pid.launch.py  sick.launch.py  sim.launch.py  sim.py  sim_leo.py  simulation.launch.py  teleop.launch.py  test_status_light.launch.py  websocket.launch.py
urc_bringup/src/: ground_truth.cpp  heartbeat.cpp  heartbeat_publisher.cpp  orientation_pose_bridge.cpp  rocker_effort_pid.cpp  rocker_tf_broadcaster.cpp  rover_pose_bridge.cpp
urc_bringup/strategies/: GPSBehaviorTree  bt_test.xml  gps_behavior_tree.xml  main.btproj  main_tree.xml  navigation_subtree.xml  test_strategy.xml  tree.xml  urc_strategies.btproj
urc_bt/: CMakeLists.txt  README.md  bt.md  package.xml
urc_bt/src/: bt_orchestor.cpp  bt_orchestrator.cpp
urc_bt_nodes/: CMakeLists.txt  package.xml
urc_bt_nodes/src/: call_follow_path.cpp  call_generate_plan.cpp  call_generate_search_path.cpp  call_search.cpp
urc_control/: CMakeLists.txt  README.md  package.xml
urc_control/launch/: allbringup.launch.py  bringup.launch.py  udp_send.py  udp_test.py  urc_pb2.py
urc_control/src/: control_node.cpp
urc_controllers/: CMakeLists.txt  package.xml  status_light_controller.xml  test_hardware_controller.xml  urc_controllers.xml
urc_controllers/src/: bms_broadcaster.cpp  control_test.cpp  control_test.py  imu_broadcaster.cpp  status_light_controller.cpp  swerve_drive_controller.cpp  test_hardware_controller.cpp
urc_controllers/test/: test_load_status_light.cpp
urc_dashboard/: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  package.xml
urc_dashboard/public/: index.html  manifest.json
urc_dashboard/src/: App.tsx  index.css
urc_gazebo/: CMakeLists.txt  gazebo.md  package.xml
urc_gazebo/config/: RoboticArm_params.yaml  ekf.yaml  g_ground_truth_params.yaml  ground_truth_params.yaml  magnetometer_params.yaml  my_controllers.yaml  scan_to_pointcloud_params.yaml  urc_gazebo_params.yaml
urc_gazebo/env-hooks/: urc_simulation.dsv.in
urc_gazebo/include/: control.hpp  ground_truth.hpp  monkey.hpp  scan_to_pointcloud.h  scan_to_pointcloud.hpp
urc_gazebo/launch/: simulation.launch.py  spawn_jessii.py  spawn_walli.py  spawn_wallii.py
urc_gazebo/meshes/: Bicep.stl  Forearm.stl  Spine.stl
urc_gazebo/src/: control.cpp  ground_truth.cpp  monkey.cpp  scan_to_pointcloud.cpp
urc_gazebo/test/: CMakeLists.txt
urc_gazebo/urdf/: Arm URDF v1.csv  Arm URDF v1.urdf  ArmCopy.urdf  Arm_URDF_v1.urdf  Claw.urdf  EndEffector.csv  EndEffector.urdf  Panda.urdf  RoboArm.urdf  RobotArm.urdf  RoboticArm.urdf  WalliiArm.urdf  WalliiArmV1.urdf  WalliiArmV3.urdf  arm_urdf.urdf  jessii.urdf.xacro  ros2_control.xacro  walli.xacro  walliArmV3.urdf  walli_arm.urdf  walli_arm_v3.urdf  walli_inertials.xacro  walli_prop.xacro  wallii.xacro
urc_hw/: CMakeLists.txt  package.xml  urc_hw.xml
urc_hw_description/: .setup_assistant  CMakeLists.txt  package.xml
urc_hw_description/config/: gazebo_controllers.yaml  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  (+4 more)
urc_localization/: CMakeLists.txt  localization.md  package.xml
urc_manipulation/: CMakeLists.txt  package.xml
urc_msgs/: CMakeLists.txt  README.md  msgs.md  package.xml
urc_nanopb/: CMakeLists.txt  README.md  nanopob.md  package.xml
urc_nav2/: CMakeLists.txt  package.xml
urc_nav2_plugins/: CMakeLists.txt  README.md  costmap_2d_plugins.xml  package.xml
(+4052 files in other folders)
