<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urc_behavior</name>
  <version>0.0.0</version>
  <description>This package contains the behavior tree executor and goal dispatcher nodes.</description>
  <maintainer email="yashas.amb@gmail.com">Yashas Ambati</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>urc_msgs</depend>
  <depend>urc_bt_nodes</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>