cmake_minimum_required(VERSION 3.5)
project(urc_bringup)

include(../cmake/default_settings.cmake)

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_components REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rosbridge_server REQUIRED)
find_package(tf2_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(urc_msgs REQUIRED)

include_directories(
  include
)

# Library creation
add_library(${PROJECT_NAME} SHARED
  src/heartbeat_publisher.cpp
  src/orientation_pose_bridge.cpp
)

set(dependencies
  rclcpp
  rclcpp_components
  std_msgs
  rosbridge_server
  sensor_msgs
  tf2_msgs
  urc_msgs
)

ament_target_dependencies(${PROJECT_NAME}
  ${dependencies}
)

# Node registration
rclcpp_components_register_node(
  ${PROJECT_NAME}
  PLUGIN "heartbeat_publisher::HeartbeatPublisher"
  EXECUTABLE ${PROJECT_NAME}_HeartbeatPublisher
)

rclcpp_components_register_node(
  ${PROJECT_NAME}
  PLUGIN "orientation_pose_bridge::OrientationPoseBridge"
  EXECUTABLE ${PROJECT_NAME}_OrientationPoseBridge
)


# Install launch files.
install(
  DIRECTORY
  launch
  config
  DESTINATION share/${PROJECT_NAME}/
)

# Install library
install(TARGETS
  ${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the copyright linker
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_include_directories(msg)

ament_export_include_directories(include)

ament_export_libraries(${PROJECT_NAME})
ament_export_dependencies(${dependencies})

ament_package()
