<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urc_bringup</name>
  <version>0.0.0</version>
  <description>Package to launch all urc packages</description>
  <maintainer email="abhiramg2021@gmail.com">Abhiram Ghanta</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>twist_mux</depend>
  <depend>rosbridge_server</depend>
  <depend>nmea_navsat_driver</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>