<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urc_controllers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zhiwan13579@126.com">keseterg</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>urc_util</depend>
  <depend>urc_hw</depend>

  <build_depend>pluginlib</build_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>