<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urc_gazebo</name>
  <version>0.0.0</version>
  <description>Package for launching and configuring gazebo simulation.</description>
  <maintainer email="matthew.scott.hannay@gmail.com">matthewhannay</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>urc_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>laser_geometry</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/urdf/models"/>
    <gazebo_ros gazebo_resource_path="${prefix}/urdf/media:${prefix}/urdf/worlds"/>
  </export>
</package>
